--- a/src/TurnAroundPromptApi.Api/appsettings.json
+++ b/src/TurnAroundPromptApi.Api/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AWS": {
+    "Region": "us-east-1",
+    "Profile": "default"
+  },
+  "DynamoDB": {
+    "TableName": "TurnaroundPromptTable"
+  }
 }
