--- a/src/TurnAroundPromptApi.Services/TurnAroundPromptApi.Services.csproj
+++ b/src/TurnAroundPromptApi.Services/TurnAroundPromptApi.Services.csproj
@@ -7,8 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="4.0.3.1" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.305.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
