Refactor API key authentication and update project structure

--- a/src/TurnAroundPromptApi.Api/appsettings.json
+++ b/src/TurnAroundPromptApi.Api/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "AWS": {
-    "Region": "us-east-1",
-    "Profile": "default"
+    "Region": "us-east-1111111",
+    "Profile": "default1111111"
   },
   "DynamoDB": {
     "TableName": "TurnaroundPromptTable"
